triviagame/force-app/main/default/objects/Trivia_Game_Question__c/Trivia_Game_Question__c.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: junction object between Trivia Game and Trivia Question</description>
    <label>Trivia Game Question</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Game Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>