triviagame/force-app/main/default/objects/Trivia_Game_Question__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: The order in which questions appear on the screen during the game</description>
    <inlineHelpText>The order in which questions appear on the screen during the game</inlineHelpText>
    <label>Serial Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>