triviagame/force-app/main/default/objects/Trivia_Game_Question__c/fields/Trivia_Question__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Question__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: master-detail to trivia question</description>
    <inlineHelpText>master-detail to trivia question</inlineHelpText>
    <label>Trivia Question</label>
    <referenceTo>Trivia_Question__c</referenceTo>
    <relationshipLabel>Trivia Game Questions</relationshipLabel>
    <relationshipName>Trivia_Game_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>